--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "fmc-comic",
+  "name": "fmc-comic-v2",
+  "private": true,
   "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
+    "deploy": "npm run build && vercel --prod"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -13,19 +17,32 @@
     "react-router-dom": "^6.20.0",
     "swiper": "^10.3.1",
     "framer-motion": "^10.16.4",
-    "react-query": "^3.39.3",
-    "uuid": "^9.0.1"
+    "@tanstack/react-query": "^5.12.0",
+    "uuid": "^9.0.1",
+    "react-intersection-observer": "^9.5.3",
+    "react-hotkeys-hook": "^4.4.1",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-pwa": "^0.17.4"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
