--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
-    "deploy": "npm run build && vercel --prod"
+    "deploy": "npm run build && vercel --prod",
+    
+    // Backend scripts (opsional, untuk run lokal)
+    "api:dev": "cd api && npm start",
+    "dev:full": "concurrently \"npm run dev\" \"npm run api:dev\""
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -31,6 +35,7 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",  // ← ADD THIS for running both frontend & backend
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
