--- a/vercel.json
+++ b/vercel.json
@@ -14,21 +14,27 @@
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.js" },
-    { "source": "/series/:slug", "destination": "/index.html" },
-    { "source": "/chapter/:slug", "destination": "/index.html" },
-    { "source": "/ongoing", "destination": "/index.html" },
-    { "source": "/completed", "destination": "/index.html" },
-    { "source": "/bookmarks", "destination": "/index.html" },
-    { "source": "/history", "destination": "/index.html" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ],
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
-        { "key": "Service-Worker-Allowed", "value": "/" },
-        { "key": "Cache-Control", "value": "public, max-age=3600" }
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
       ]
     }
   ]
